<resources>
    <string name="app_name">Mini project image AI</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="filter_ek3_string">FILTER</string>
    <string name="mean_filter_string">Mean Filter</string>
    <string name="gaussian_filter_string">Gaussian Filter</string>
    <string name="median_filter_string">Median Filter</string>
    <string name="sobel_string">Sobel</string>
    <string name="edge_detection_filter_string">Edge Detection Filter</string>
    <string name="image_restoration_string">Image Restoration</string>
    <string name="canny_string">Canny</string>
    <string name="wiener_filter_string">Wiener Filter</string>
    <string name="gaussian_filter_ek1_string">Gaussian Filter</string>
    <string name="laplacian_string">Laplacian</string>
    <string name="enhance_ek3_string">ENHANCE</string>
    <string name="brightness_adjustment_string">Brightness Adjustment</string>
    <string name="contrast_adjustment_string">Contrast Adjustment</string>
    <string name="gamma_correction_string">Gamma Correction</string>
    <string name="histogram_equalization_string">Histogram Equalization</string>
    <string name="contrast_stretching_string">Contrast Stretching</string>
    <string name="save_string">SAVE</string>
    <string name="result_image_string">Result Image</string>
    <string name="crop_string">CROP</string>
    <string name="grayscale_string">GRAYSCALE</string>
    <string name="color_string">COLOR</string>
    <string name="filter_string">FILTER</string>
    <string name="flip_string">FLIP</string>
    <string name="rotate_string">ROTATE</string>
    <string name="border_string">BORDER</string>
    <string name="compress_string">COMPRESS</string>
    <string name="segmentation_string">SEGMENT</string>
    <string name="binary_string">BINARY</string>
    <string name="enhance_string">ENHANCE</string>
    <string name="modified_image_string">Modified Image</string>
    <string name="original_image_string">Original Image</string>
    <string name="create_string">Create</string>
    <string name="photos_string">Photos</string>
    <string name="negative_effect_string">NEGATIVE EFFECT</string>
    <string name="negative_effect_ek1_string">NEGATIVE EFFECT</string>
    <string name="transform_your_photos_with_string">Transform Your Photos with </string>
    <string name="cutting_edge_ai_tools_string">Cutting-Edge AI Tools</string>
    <string name="all_in_one_app_string">All in One App</string>
    <string name="edit__enhance__and_explore_string">Edit, Enhance, and Explore</string>
    <string name="let_your_creativity_shine_with_ai_powered_image_processing_string">Let Your Creativity Shine with AI-Powered Image Processing</string>
    <string name="start_editing_now__string">Start Editing Now!</string>
    <string name="i_m_e_j_string">i m e j</string>
</resources>