<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"

	android:id="@+id/edit_photo"
		android:layout_width="wrap_content"
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >


			<RelativeLayout
				android:id="@+id/page_edit_photo_ek1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<RelativeLayout
					android:id="@+id/rectangle_43"
					android:layout_width="412dp"
					android:layout_height="60dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/rectangle_43_shape">

					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:orientation="horizontal">

						<LinearLayout
							android:id="@+id/backlayout"
							android:layout_width="50dp"
							android:layout_height="match_parent"
							android:clickable="true">

							<ImageView
								android:id="@+id/editbackview"
								android:layout_width="32.38dp"
								android:layout_height="32.38dp"
								android:layout_marginStart="7dp"
								android:layout_marginTop="12.31dp"
								android:src="@drawable/back" />
						</LinearLayout>

						<View
							android:layout_width="82dp"
							android:layout_height="match_parent"
							android:layout_marginLeft="8dp"
							android:layout_marginRight="8dp" />

						<LinearLayout
							android:id="@+id/undolayout"
							android:layout_width="50dp"
							android:layout_height="match_parent"
							android:clickable="true">

							<ImageView
								android:id="@+id/editundoview"
								android:layout_width="22.38dp"
								android:layout_height="22.38dp"
								android:layout_marginStart="14.7dp"
								android:layout_marginTop="17.01dp"
								android:src="@drawable/undo" />
						</LinearLayout>

						<View
							android:layout_width="1dp"
							android:layout_height="match_parent"
							android:layout_marginLeft="8dp"
							android:layout_marginRight="8dp" />

						<LinearLayout
							android:id="@+id/redolayout"
							android:layout_width="50dp"
							android:layout_height="match_parent"
							android:clickable="true">

							<ImageView
								android:id="@+id/editredoview"
								android:layout_width="22.38dp"
								android:layout_height="22.38dp"
								android:layout_marginStart="15dp"
								android:layout_marginTop="16.81dp"
								android:src="@drawable/redo" />
						</LinearLayout>

						<View
							android:layout_width="82dp"
							android:layout_height="match_parent"
							android:layout_marginLeft="8dp"
							android:layout_marginRight="8dp" />

						<LinearLayout
							android:id="@+id/checklayout"
							android:layout_width="50dp"
							android:layout_height="match_parent"
							android:clickable="true">

							<ImageView
								android:id="@+id/editcheckview"
								android:layout_width="28.38dp"
								android:layout_height="28.38dp"
								android:layout_marginStart="2dp"
								android:layout_marginTop="12.31dp"
								android:src="@drawable/check" />
						</LinearLayout>
					</LinearLayout>
				</RelativeLayout>

				<TextView
					android:layout_width="151dp"
					android:layout_height="27dp"
					android:layout_marginLeft="59dp"
					android:layout_marginTop="94dp"
					android:text="@string/original_image_string"
					android:textColor="@color/rectangle_36_color"
					android:textSize="14sp" />

				<RelativeLayout
					android:id="@+id/photo_1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="49dp"
					android:layout_marginTop="117dp">


					<RelativeLayout
						android:id="@+id/et_profile_female"
						android:layout_width="314dp"
						android:layout_height="313.61dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp">


						<ImageView
							android:id="@+id/originalimage"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:background="@drawable/rectangle_36_shape"
							android:src="@drawable/vector" />

					</RelativeLayout>

				</RelativeLayout>

				<TextView
					android:layout_width="151dp"
					android:layout_height="27dp"
					android:layout_marginLeft="49dp"
					android:layout_marginTop="463dp"
					android:text="@string/modified_image_string"
					android:textColor="@color/rectangle_36_color"
					android:textSize="14sp" />

				<RelativeLayout
					android:id="@+id/photo_2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="43dp"
					android:layout_marginTop="485dp">

					<RelativeLayout
						android:id="@+id/et_profile_female_ek1"
						android:layout_width="314dp"
						android:layout_height="313.61dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp">

						<ImageView
							android:id="@+id/modifiedimage"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:background="@drawable/rectangle_36_ek1_shape"
							android:src="@drawable/vector_ek1" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/rectangle_45"
					android:layout_width="match_parent"
					android:layout_height="75dp"
					android:layout_marginTop="842dp"
					android:background="@drawable/rectangle_45_shape">

					<!-- New HorizontalScrollView for the Blue Bar -->
					<HorizontalScrollView
						android:id="@+id/blue_bar_scrollview"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:fillViewport="true"
						android:scrollbars="none">

						<LinearLayout
							android:id="@+id/blue_bar_content"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:orientation="horizontal">

							<View
								android:layout_width="2dp"
								android:layout_height="match_parent"
								android:layout_marginRight="8dp"
								android:background="@color/black" />

							<LinearLayout
								android:id="@+id/enhancelayout"
								android:layout_width="80dp"
								android:layout_height="wrap_content"
								android:clickable="true"
								android:orientation="vertical">

								<ImageView
									android:id="@+id/icon1"
									android:layout_width="30dp"
									android:layout_height="30dp"
									android:layout_marginLeft="24dp"
									android:layout_marginTop="15dp"
									android:layout_marginBottom="5dp"
									android:src="@drawable/camera" />

								<TextView
									android:id="@+id/enhance"
									android:layout_width="92dp"
									android:layout_height="30dp"
									android:layout_marginLeft="4dp"
									android:text="@string/enhance_string"
									android:textColor="@color/_bg__edit_photo_ek2_color"
									android:textSize="16sp" />
							</LinearLayout>

							<View
								android:layout_width="2dp"
								android:layout_height="match_parent"
								android:layout_marginLeft="8dp"
								android:layout_marginRight="8dp"
								android:background="@color/black" />

							<LinearLayout
								android:id="@+id/filterlayout"
								android:layout_width="80dp"
								android:layout_height="wrap_content"
								android:clickable="true"
								android:orientation="vertical">

								<ImageView
									android:id="@+id/icon2"
									android:layout_width="30dp"
									android:layout_height="30dp"
									android:layout_marginLeft="24dp"
									android:layout_marginTop="15dp"
									android:layout_marginBottom="5dp"
									android:src="@drawable/sparkles" />

								<TextView
									android:id="@+id/filter"
									android:layout_width="92dp"
									android:layout_height="30dp"
									android:layout_marginLeft="18dp"
									android:text="@string/filter_string"
									android:textColor="@color/_bg__edit_photo_ek2_color"
									android:textSize="16sp" />
							</LinearLayout>

							<View
								android:layout_width="2dp"
								android:layout_height="match_parent"
								android:layout_marginLeft="8dp"
								android:layout_marginRight="8dp"
								android:background="@color/black" />

							<LinearLayout
								android:id="@+id/croplayout"
								android:layout_width="80dp"
								android:layout_height="wrap_content"
								android:clickable="true"
								android:orientation="vertical">

								<ImageView
									android:id="@+id/icon3"
									android:layout_width="30dp"
									android:layout_height="30dp"
									android:layout_marginLeft="20dp"
									android:layout_marginTop="15dp"
									android:layout_marginBottom="5dp"
									android:src="@drawable/crop" />

								<TextView
									android:id="@+id/crop"
									android:layout_width="92dp"
									android:layout_height="30dp"
									android:layout_marginLeft="18dp"
									android:text="@string/crop_string"
									android:textColor="@color/_bg__edit_photo_ek2_color"
									android:textSize="16sp" />
							</LinearLayout>

							<View
								android:layout_width="2dp"
								android:layout_height="match_parent"
								android:layout_marginLeft="8dp"
								android:layout_marginRight="8dp"
								android:background="@color/black" />

							<LinearLayout
								android:id="@+id/grayscalelayout"
								android:layout_width="90dp"
								android:layout_height="wrap_content"
								android:clickable="true"
								android:orientation="vertical">

								<ImageView
									android:id="@+id/icon4"
									android:layout_width="30dp"
									android:layout_height="30dp"
									android:layout_marginLeft="27dp"
									android:layout_marginTop="15dp"
									android:layout_marginBottom="5dp"
									android:src="@drawable/grayscale" />

								<TextView
									android:id="@+id/grayscale"
									android:layout_width="92dp"
									android:layout_height="30dp"
									android:text="@string/grayscale_string"
									android:textColor="@color/_bg__edit_photo_ek2_color"
									android:textSize="16sp" />
							</LinearLayout>

							<View
								android:layout_width="2dp"
								android:layout_height="match_parent"
								android:layout_marginLeft="8dp"
								android:layout_marginRight="8dp"
								android:background="@color/black" />

							<LinearLayout
								android:id="@+id/colorlayout"
								android:layout_width="80dp"
								android:layout_height="wrap_content"
								android:clickable="true"
								android:orientation="vertical">

								<ImageView
									android:id="@+id/icon5"
									android:layout_width="30dp"
									android:layout_height="30dp"
									android:layout_marginLeft="24dp"
									android:layout_marginTop="15dp"
									android:layout_marginBottom="5dp"
									android:src="@drawable/palette" />

								<TextView
									android:id="@+id/color"
									android:layout_width="92dp"
									android:layout_height="30dp"
									android:layout_marginLeft="15dp"
									android:text="@string/color_string"
									android:textColor="@color/_bg__edit_photo_ek2_color"
									android:textSize="16sp" />
							</LinearLayout>

							<View
								android:layout_width="2dp"
								android:layout_height="match_parent"
								android:layout_marginLeft="8dp"
								android:layout_marginRight="8dp"
								android:background="@color/black" />

							<LinearLayout
								android:id="@+id/fliplayout"
								android:layout_width="80dp"
								android:layout_height="wrap_content"
								android:clickable="true"
								android:orientation="vertical">

								<ImageView
									android:id="@+id/icon6"
									android:layout_width="30dp"
									android:layout_height="30dp"
									android:layout_marginLeft="24dp"
									android:layout_marginTop="15dp"
									android:layout_marginBottom="5dp"
									android:src="@drawable/flip" />

								<TextView
									android:id="@+id/flip"
									android:layout_width="92dp"
									android:layout_height="30dp"
									android:layout_marginLeft="24dp"
									android:text="@string/flip_string"
									android:textColor="@color/_bg__edit_photo_ek2_color"
									android:textSize="16sp" />
							</LinearLayout>

							<View
								android:layout_width="2dp"
								android:layout_height="match_parent"
								android:layout_marginLeft="8dp"
								android:layout_marginRight="8dp"
								android:background="@color/black" />

							<LinearLayout
								android:id="@+id/rotatelayout"
								android:layout_width="80dp"
								android:layout_height="wrap_content"
								android:clickable="true"
								android:orientation="vertical">

								<ImageView
									android:id="@+id/icon7"
									android:layout_width="30dp"
									android:layout_height="30dp"
									android:layout_marginLeft="24dp"
									android:layout_marginTop="15dp"
									android:layout_marginBottom="5dp"
									android:src="@drawable/rotate" />

								<TextView
									android:id="@+id/rotate"
									android:layout_width="92dp"
									android:layout_height="30dp"
									android:layout_marginLeft="12dp"
									android:text="@string/rotate_string"
									android:textColor="@color/_bg__edit_photo_ek2_color"
									android:textSize="16sp" />
							</LinearLayout>

							<View
								android:layout_width="2dp"
								android:layout_height="match_parent"
								android:layout_marginLeft="8dp"
								android:layout_marginRight="8dp"
								android:background="@color/black" />

							<LinearLayout
								android:id="@+id/borderlayout"
								android:layout_width="80dp"
								android:layout_height="wrap_content"
								android:clickable="true"
								android:orientation="vertical">

								<ImageView
									android:id="@+id/icon8"
									android:layout_width="30dp"
									android:layout_height="30dp"
									android:layout_marginLeft="25dp"
									android:layout_marginTop="15dp"
									android:layout_marginBottom="5dp"
									android:src="@drawable/border" />

								<TextView
									android:id="@+id/border"
									android:layout_width="92dp"
									android:layout_height="30dp"
									android:layout_marginLeft="12dp"
									android:text="@string/border_string"
									android:textColor="@color/_bg__edit_photo_ek2_color"
									android:textSize="16sp" />
							</LinearLayout>

							<View
								android:layout_width="2dp"
								android:layout_height="match_parent"
								android:layout_marginLeft="8dp"
								android:layout_marginRight="8dp"
								android:background="@color/black" />

							<LinearLayout
								android:id="@+id/compresslayout"
								android:layout_width="90dp"
								android:layout_height="wrap_content"
								android:clickable="true"
								android:orientation="vertical">

								<ImageView
									android:id="@+id/icon9"
									android:layout_width="30dp"
									android:layout_height="30dp"
									android:layout_marginLeft="27dp"
									android:layout_marginTop="15dp"
									android:layout_marginBottom="5dp"
									android:src="@drawable/compress" />

								<TextView
									android:id="@+id/compress"
									android:layout_width="92dp"
									android:layout_height="30dp"
									android:layout_marginLeft="3dp"
									android:text="@string/compress_string"
									android:textColor="@color/_bg__edit_photo_ek2_color"
									android:textSize="16sp" />
							</LinearLayout>

							<View
								android:layout_width="2dp"
								android:layout_height="match_parent"
								android:layout_marginLeft="8dp"
								android:layout_marginRight="8dp"
								android:background="@color/black" />

							<LinearLayout
								android:id="@+id/segmentlayout"
								android:layout_width="80dp"
								android:layout_height="wrap_content"
								android:clickable="true"
								android:orientation="vertical">

								<ImageView
									android:id="@+id/icon10"
									android:layout_width="35dp"
									android:layout_height="35dp"
									android:layout_marginLeft="23dp"
									android:layout_marginTop="13dp"
									android:layout_marginBottom="2dp"
									android:src="@drawable/segment" />

								<TextView
									android:id="@+id/segmentation"
									android:layout_width="92dp"
									android:layout_height="30dp"
									android:layout_marginLeft="4dp"
									android:text="@string/segmentation_string"
									android:textColor="@color/_bg__edit_photo_ek2_color"
									android:textSize="16sp" />
							</LinearLayout>

							<View
								android:layout_width="2dp"
								android:layout_height="match_parent"
								android:layout_marginLeft="8dp"
								android:layout_marginRight="8dp"
								android:background="@color/black" />

							<LinearLayout
								android:id="@+id/binarylayout"
								android:layout_width="80dp"
								android:layout_height="wrap_content"
								android:clickable="true"
								android:orientation="vertical">

								<ImageView
									android:id="@+id/icon11"
									android:layout_width="30dp"
									android:layout_height="30dp"
									android:layout_marginLeft="24dp"
									android:layout_marginTop="15dp"
									android:layout_marginBottom="5dp"
									android:src="@drawable/binary" />

								<TextView
									android:id="@+id/binary"
									android:layout_width="92dp"
									android:layout_height="30dp"
									android:layout_marginLeft="13dp"
									android:text="@string/binary_string"
									android:textColor="@color/_bg__edit_photo_ek2_color"
									android:textSize="16sp" />
							</LinearLayout>

							<View
								android:layout_width="2dp"
								android:layout_height="match_parent"
								android:layout_marginLeft="8dp"
								android:layout_marginRight="8dp"
								android:background="@color/black" />

						</LinearLayout>
					</HorizontalScrollView>
				</RelativeLayout>


			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>

